fix extra whitespaces

--- a/src/main/webapp/main-style.css
+++ b/src/main/webapp/main-style.css
@@ -101,8 +101,6 @@ h2 {
   font-size: 20px;
   font-style: bold;
   color: white;
-  width: 140px;
-  height: 20px;
 }
 
 #submit:hover{
