--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -26,6 +26,7 @@ input{
 
 #instruction {
   color: gray;
+  margin-left: 15px;
 }
 
 #filter-alert {
